--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" src="styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="inputs">
+        <input id="numOne" type="text" placeholder="numOne" />
+        <input id="numTwo" type="text" placeholder="numtwo" />
+        <input id="answer" type="text" placeholder="answer" />
+      </div>
+      <div class="buttons">
+        <button id="add" type="text">+ add</button>
+        <button id="subtract" type="text">- subtract</button>
+        <button id="multiply" type="text">* multiply</button>
+        <button id="divide" type="text">/ divide</button>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
