--- a/calculaterIndex.html
+++ b/calculaterIndex.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet" type="text/css" href="calculatorStyles.css" />
   </head>
   <body>
+    <div class="container">
+      
+        <button class="numerals" id="clear" type="button">C</button>
+        <input id="inputs" type="text" readOnly></input>
+        <button class="numerals" id="seven" type="button" value="7">7</button>
+        <button class="numerals" id="eight" type="button" value="8">8</button>
+        <button class="numerals" id="nine" type="button" value="9">9</button>
+        <button class="operators" id="divide" type="button">/</button>
+        <button class="numerals" id="four" type="button" value="4">4</button>
+        <button class="numerals" id="five" type="button" value="5">5</button>
+        <button class="numerals" id="six" type="button" value="6">6</button>
+        <button class="operators" id="multiply" type="button">X</button>
+        <button class="numerals" id="one" type="button" value="1">1</button>
+        <button class="numerals" id="two" type="button" value="2">2</button>
+        <button class="numerals" id="three" type="button" value="3">3</button>
+        <button class="operators" id="minus" type="button" >-</button>
+        <button class="numerals" id="zero" type="button" value="0">0</button>
+        <button class="numerals" id="decimal" type="button" value=".">.</button>
+        <button class="numerals" id="equals" type="button">=</button>
+        <button class="operators" id="plus" type="button">+</button>
+
+    </div>
+
+
+
+
+
+
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
